--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <link href="css/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="scss/styles.css" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" href="./css/reset.css">
   </head>
   <body>
     <header>
